syntax = "proto2";

option java_package = "com.android.dialer.callintent";
option java_multiple_files = true;


package com.android.dialer.callintent;

import "java/com/android/dialer/callintent/call_initiation_type.proto";

// Miscellaneous data that's included in a new outgoing call initiated by
// Dialer. The system will pass this data to the InCallUi which can use it
// for logging or for something else.
// Next tag: 15
message CallSpecificAppData {
  optional CallInitiationType.Type call_initiation_type = 1;

  // Indicates that the call is open to modification from assisted dialing.
  optional bool allow_assisted_dialing = 2;
}
